@@ -1,5 +1,7 @@
 1.2.7 to 1.2.8
 ----------------------------------------------------------------------
+- Added %assetcomment% and %assetdescr% as fields that can be used 
+  in notifications.
 - Added a date to the availability reports to choose which day to
   run.
 - Backported NSClient and NRPE to stable. Bug 1465. Thx joed.
